# us-space-mini

./: .gitignore  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh  stop.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260719_0001_create_identity_and_workspace_tables.py  20260719_0002_create_notification_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  entry.py  health.py  notifications.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: auth.py  notifications.py
backend/app/scripts/: __init__.py  deliver_notifications.py  provision_private_couple.py  seed_review_workspace.py
backend/app/services/: __init__.py  notifications.py  provisioning.py  wechat.py  wechat_notifications.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_notifications.py  test_provisioning.py
frontend/: app.d.ts  app.json  app.ts  app.wxss  config.ts  package-lock.json  package.json  project.config.json  tsconfig.json
frontend/pages/home/: index.json  index.ts  index.wxml  index.wxss
frontend/pages/login/: index.js  index.json  index.ts  index.wxml  index.wxss
frontend/pages/settings/notifications/: index.js  index.json  index.ts  index.wxml  (+1 more)
frontend/utils/: api.js  api.ts  mock-auth.js  mock-auth.ts  session.js  session.ts
openspec/: config.yaml
openspec/changes/bootstrap-private-couple-space/: design.md  proposal.md  tasks.md
(+6 files in other folders)
