[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "couple-space-api"
version = "0.1.0"
description = "Private couple-space API for the WeChat Mini Program"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "argon2-cffi>=23.1,<26.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "PyJWT>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "PyMySQL>=1.1,<2.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["app"]
